@@ -13,6 +13,7 @@
   * Add Enumerable#clear
   * Add Enumerable#index
   * Add H#invert
+  * Add Enumerable#replace
 
 2009-03-13 - Sean Huber (shuber@huberry.com)
   * Add Enumerable (incomplete)
